--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
-
 body {
-  max-width: 1024px;
-  margin: 0 auto;
-  font-family: Arial, sans-serif;
+    max-width: 1024px;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
 }
 
-.col-2{
-  float:left;
+.col-2 {
+    float: left;
+    width: 50%;
+}
+
+.col-2 img {
+    margin-right: 50px;
+    border-radius: 50%;
+}
+
+.prime-text {
+    font-size: 17px;
+    line-height: 30px;
+}
+
+h3 {
+    margin-top: 5px;
+    padding: 0;
+}
+
+.block {
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    line-height: 30px;
 }
